cmake_minimum_required(VERSION 3.16)
project(rocksdb_merge_bench LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(ROCKSDB_TARGET "")
find_package(RocksDB CONFIG QUIET)
if (TARGET RocksDB::rocksdb)
  set(ROCKSDB_TARGET RocksDB::rocksdb)
endif ()

if (ROCKSDB_TARGET STREQUAL "")
  find_package(rocksdb CONFIG QUIET)
  if (TARGET rocksdb::rocksdb)
    set(ROCKSDB_TARGET rocksdb::rocksdb)
  endif ()
endif ()

if (ROCKSDB_TARGET STREQUAL "")
  find_path(ROCKSDB_INCLUDE_DIR rocksdb/db.h)
  find_library(ROCKSDB_LIBRARY NAMES rocksdb)
  if (ROCKSDB_INCLUDE_DIR AND ROCKSDB_LIBRARY)
    add_library(rocksdb_external INTERFACE)
    target_include_directories(rocksdb_external INTERFACE "${ROCKSDB_INCLUDE_DIR}")
    target_link_libraries(rocksdb_external INTERFACE "${ROCKSDB_LIBRARY}")
    set(ROCKSDB_TARGET rocksdb_external)
  else ()
    message(FATAL_ERROR "Could not find RocksDB. Install it (e.g. via Homebrew) or set ROCKSDB_ROOT.")
  endif ()
endif ()

add_executable(merge_bench merge_bench.cc)
target_link_libraries(merge_bench PRIVATE ${ROCKSDB_TARGET})
